[package]
name = "decentral_secret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.2.1", features = ["derive", "cargo"] }
criterion = "0.4.0"
linearalgebra={git = "https://github.com/debasish-raychawdhuri/linearalgebra-rust.git", branch="master" }
proptest = "1.1.0"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
